apps/vending-machine/base/vending-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vending-service
spec:
  selector:
    app: vending-machine
  ports:
    - protocol: TCP
      port: 5001        # The port the Ingress will talk to
      targetPort: 5001 # The port your Flask app listens on
