apps/vending-machine/base/vending-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vending-ingress
spec:
  ingressClassName: traefik
  rules:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vending-service
            port:
              number: 80
